*Add option to the Bags Module to change the xOffset of both the bags and bank frame.
*Add option to the Bags Module to change the yOffset of both the bags and bank frame.

[b]General Changes[/b]
*Running the SetCVar portion of the Install process will now lock your action bars and set a value of the key you need to use to drag your buttons around to the Shift Key. This is to prevent any users from having issues with dragging action buttons using the action button abilities.
*The In-Game config has received a bit of a overhaul to make finding stuff a little easier.
*The Bags module now has its own category inside the In-Game Configuration.
*Removed the experimental Profile Binds option. See: http://wow.curseforge.com/addons/elvui/tickets/258-improvements-to-profile-binds/#comments
*Add currency information to the bags data text tooltip.
*UIScale must be changed by at least 1% in order to receive a UIScale popup warning to reload.
*Chat Timestamps should now all have brackets around them, and be colored gray.
*Minimap Location text is now only displayed when moussing over the minimap.

[b]Fixes[/b]
*The Reputation bar should have its width correctly set on login.
*Using the key bind mode on a bar that is set to mouse over should properly retain its visibility state.
*The Main Assist frame should no longer re-attach itself to the Main Tank frame after the PLAYER_ENTERING_WORLD event fires, or logging into the game.
*Fix lua error when using Dual Profiles and someone has the role icons displayed on their unit frame.
*Fix lua error when using Dual Profiles and someone has a debuff/buff displayed on their unit frame.
*Fix issue where right clicking on B.Net conversation to invite more friends caused a lua error with the blizzard API.
*Fix lua error for Spanish/Mexican clients.
*Fix issue with cool down text. Days were being displayed in hour format.
*Fix a few compatibility issues with WIM.